--- a/app/scripts/account/templates/register.tpl.html
+++ b/app/scripts/account/templates/register.tpl.html
@@ -76,11 +76,7 @@
             <div class="form-group" ng-if="showFileUploader">
                 <label class="col-sm-3 col-xs-12 control-label">{{'CHALLENGE_SUGGEST_BRIEF'|translate}}</label>
                 <div class="col-sm-9 col-xs-12">
-                    <input type="file" ng-file-select="onFileSelect($files)">
-                    <div ng-file-drop="onFileSelect($files)" class="upload-box" ng-file-drag-over-class="upload-box-hover" style="background-image : url('{{ fileUrl }}')">
-                        drop files here
-                    </div>
-                    <button class="btn" ng-click="upload()">Upload</button>
+                    <cri-uploader></cri-uploader>
                 </div>
             </div>
         </div>
