--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,6 +1,6 @@
 @import "less/project";
 @import "less/challenge";
-//@import "less/animate";
+@import "less/animate";
 @import "less/profile";
 @import "less/helper";
 @import "less/common";
