--- a/app/styles/less/animate.css
+++ b/app/styles/less/animate.css
@@ -1,49 +1,16 @@
-.wrapper {
-  position: relative;
+[ui-view="mainView"].ng-enter {
+  -webkit-animation: fadeInRight 0.5s;
+  animation: fadeOutRight 0.5s;
 }
-.well[ui-view] {
-  height: 65px;
+[ui-view="mainView"].ng-leave {
+  -webkit-animation: fadeOutLeft 0.5s;
+  animation: fadeOutLeft 0.5s;
 }
-[ui-view].ng-enter,
-[ui-view].ng-leave {
-  position: absolute;
-  left: 0;
-  right: 0;
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
+.tag-list.ng-leave {
+  -webkit-animation: flipOutX 1s;
+  animation: flipOutX 1s;
 }
-[ui-view].ng-enter {
-  opacity: 0;
-  -webkit-transform: scale3d(0.5, 0.5, 0.5);
-  -moz-transform: scale3d(0.5, 0.5, 0.5);
-  transform: scale3d(0.5, 0.5, 0.5);
-}
-[ui-view].ng-enter-active {
-  opacity: 1;
-  -webkit-transform: scale3d(1, 1, 1);
-  -moz-transform: scale3d(1, 1, 1);
-  transform: scale3d(1, 1, 1);
-}
-[ui-view].ng-leave {
-  opacity: 1;
-  /*padding-left: 0px;*/
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-[ui-view].ng-leave-active {
-  opacity: 0;
-  /*padding-left: 100px;*/
-  -webkit-transform: translate3d(100px, 0, 0);
-  -moz-transform: translate3d(100px, 0, 0);
-  transform: translate3d(100px, 0, 0);
-}
-.ui-select-bootstrap {
-  -webkit-transition: width 1s easeInOut;
-  -moz-transition: width 1s;
-  -ms-transition: width 1s;
-  -o-transition: width 1s;
-  transition: width 1s easeInOut;
+.tag-list.ng-enter {
+  -webkit-animation: flipInX 1s;
+  animation: flipInX 1s;
 }
