--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -34,6 +34,22 @@
 .challenge-map .angular-google-map-container {
   height: 400px;
 }
+[ui-view="mainView"].ng-enter {
+  -webkit-animation: fadeInRight 0.5s;
+  animation: fadeOutRight 0.5s;
+}
+[ui-view="mainView"].ng-leave {
+  -webkit-animation: fadeOutLeft 0.5s;
+  animation: fadeOutLeft 0.5s;
+}
+.tag-list.ng-leave {
+  -webkit-animation: flipOutX 1s;
+  animation: flipOutX 1s;
+}
+.tag-list.ng-enter {
+  -webkit-animation: flipInX 1s;
+  animation: flipInX 1s;
+}
 .profile-map .angular-google-map-container {
   height: 200px;
 }
