--- a/app/scripts/challenge/templates/challenge-settings.tpl.html
+++ b/app/scripts/challenge/templates/challenge-settings.tpl.html
@@ -33,7 +33,7 @@
                                 <div class="form-group">
                                     <label  class="col-sm-2 col-xs-12 control-label">Brief:</label>
                                     <div class="col-sm-10 col-xs-12">
-                                        <text-angular ng-model="challenge.brief"></text-angular>
+                                        <textarea ui-tinymce="tinymceOption" ng-model="challenge.brief"></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group">
