--- a/app/scripts/challenge/templates/challenge.tpl.html
+++ b/app/scripts/challenge/templates/challenge.tpl.html
@@ -1,25 +1,77 @@
-<nav class="col-lg-2 col-xs-12">
-    <ul class="nav nav-pills nav-stacked">
-        <li ui-route="/challenge/{{ challenge.accessUrl }}/list" ng-class="{active: $uiRoute}">
-            <a ui-sref="challenge.list">List</a>
-        </li>
-        <li ui-route="/challenge/{{ challenge.accessUrl }}/details" ng-class="{active: $uiRoute}">
-            <a ui-sref="challenge.details">Details</a>
-        </li>
-        <!--<li ui-route="/challenge/{{ challenge.accessUrl }}/chat" ng-class="{active: $uiRoute}">-->
-            <!--<a ui-sref="challenge.chat">Chat</a>-->
-        <!--</li>-->
-        <li ui-route="/challenge/{{ challenge.accessUrl }}/followers" ng-class="{active: $uiRoute}">
-            <a ui-sref="challenge.followers">followers</a>
-        </li>
-        <li ui-route="/challenge/{{ challenge.accessUrl }}/settings" ng-class="{active: $uiRoute}" ng-if="isOwner">
-            <a ui-sref="challenge.settings">Settings</a>
-        </li>
-        <li ng-if="me" ui-route="/challenge/{{ challenge.accessUrl }}/projectCreation" ng-class="{active: $uiRoute}">
-            <a ui-sref="challenge.projectCreation">Create New Project</a>
-        </li>
-    </ul>
-</nav>
-<section class="col-lg-10 col-sm-12" ui-view="challengeView">
+<div class="">
+    <div class="row">
+        <div class="col-md-3 col-sm-4 col-xs-12">
+            <!--Profile basic-->
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="center">
+                        <img ng-src="{{challenge.poster}}" ng-show="challenge.poster" class="img-rounded p" width="120px" style="height:120px">
+                        <img ng-src="images/avater.jpg" ng-hide="challenge.poster" class="img-rounded" width="120px" style="height:120px">
+                    </div>
+                    <div class="clearfix">
+                    </div>
+                    <h2 class="center solid pbm" >
+                            <span ng-show="challenge.title">
+                                {{challenge.title}}
+                            </span>
 
-</section>
+                    </h2>
+                    <div class="solid center pbm ">
+                        <h3 >
+                            <span>
+                                {{followers.length}}<br>
+                                <small class="text-muted">
+                                    {{'FOLLOWER'|translate}}
+                                </small>
+                            </span>
+                        </h3>
+                        <h3>
+                            <span>
+                                {{followings.length}}<br>
+                                <small class="text-muted">
+                                    {{'FOLLOWING'|translate}}
+                                </small>
+                            </span>
+                        </h3>
+
+
+                        <google-map center="map.center" zoom="map.zoom" ng-if="map" class="challenge-map" options="mapOptions">
+                            <marker coords="map.center"></marker>
+                        </google-map>
+                    </div>
+                    <div class="pbm mtl mbl">
+                        <div class="text-muted">
+                            Join date:{{challenge.createDate|date}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-9 col-sm-8 col-xs-12">
+            <ul class="nav nav-pills">
+                <li ui-route="/challenge/{{ challenge.accessUrl }}/list" ng-class="{active: $uiRoute}">
+                    <a ui-sref="challenge.list">List</a>
+                </li>
+                <li ui-route="/challenge/{{ challenge.accessUrl }}/details" ng-class="{active: $uiRoute}">
+                    <a ui-sref="challenge.details">Details</a>
+                </li>
+                <!--<li ui-route="/challenge/{{ challenge.accessUrl }}/chat" ng-class="{active: $uiRoute}">-->
+                <!--<a ui-sref="challenge.chat">Chat</a>-->
+                <!--</li>-->
+                <li ui-route="/challenge/{{ challenge.accessUrl }}/followers" ng-class="{active: $uiRoute}">
+                    <a ui-sref="challenge.followers">followers</a>
+                </li>
+                <li ui-route="/challenge/{{ challenge.accessUrl }}/settings" ng-class="{active: $uiRoute}" ng-if="isOwner">
+                    <a ui-sref="challenge.settings">Settings</a>
+                </li>
+                <li ng-if="me" ui-route="/challenge/{{ challenge.accessUrl }}/projectCreation" ng-class="{active: $uiRoute}">
+                    <a ui-sref="challenge.projectCreation">Create New Project</a>
+                </li>
+            </ul>
+            <div ui-view="challengeView">
+            </div>
+            <div class="clearfix mbm">
+            </div>
+        </div>
+    </div>
+</div>
