--- a/app/scripts/project/templates/project.tpl.html
+++ b/app/scripts/project/templates/project.tpl.html
@@ -57,7 +57,7 @@
                         <h2 class="panel-title">Tag Cloud</h2>
                     </div>
                     <div class="panel-body lead">
-                        <div id="myCanvasContainer">
+                        <div id="myCanvasContainer" style="height: 350px">
                             <canvas width="300" height="300" id="myCanvas">
                                 <p>Anything in here will be replaced on browsers that support the canvas element</p>
                             </canvas>
@@ -70,9 +70,12 @@
                     <div class="panel-heading">
                         <h2 class="panel-title">Localisation</h2>
                     </div>
-                    <google-map center="map.center" zoom="map.zoom" class="project-map" ng-if="map">
-                        <marker coords="map.center"></marker>
-                    </google-map>
+                    <div>
+                        <google-map center="map.center" zoom="map.zoom" class="project-map" ng-if="map" options="mapOptions">
+                            <marker coords="map.center"></marker>
+                        </google-map>
+                    </div>
+
                 </div>
             </div>
         </div>
