--- a/app/scripts/projectSetting/templates/basic.tpl.html
+++ b/app/scripts/projectSetting/templates/basic.tpl.html
@@ -25,7 +25,7 @@
                         <div class="form-group">
                             <label  class="col-sm-2 col-xs-12 control-label">Brief:</label>
                             <div class="col-sm-10 col-xs-12">
-                                <text-angular ng-model="project.brief" ></text-angular>
+                                <textarea ui-tinymce="tinymceOption" ng-model="project.brief" ></textarea>
                             </div>
                         </div>
                         <div class="form-group">
