--- a/app/scripts/topic/templates/topic.tpl.html
+++ b/app/scripts/topic/templates/topic.tpl.html
@@ -29,7 +29,7 @@
                 <div class="form-group">
                     <label  class="col-sm-2 col-xs-12 control-label">{{'PROJECT_VIEW_DIS_CONTENT'|translate}}</label>
                     <div class="col-sm-10 col-xs-12">
-                        <text-angular ng-model="tf.text"></text-angular>
+                        <textarea ui-tinymce="tinymceOption" ng-model="tf.text"></textarea>
                     </div>
                 </div>
                 <div class="form-group">
