--- a/app/styles/less/animate.less
+++ b/app/styles/less/animate.less
@@ -8,6 +8,14 @@
     animation: fadeOutLeft 0.5s;
   }
 }
+
+[ui-view="challengeView"] {
+  &.ng-enter{
+    -webkit-animation: slideInRight 0.5s;
+    animation: slideInRight 0.5s;
+  }
+}
+
 .tag-list{
   &.ng-leave{
     -webkit-animation: flipOutX 1s;
