--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -32,7 +32,7 @@
   height: 400px;
 }
 .challenge-map .angular-google-map-container {
-  height: 400px;
+  height: 200px;
 }
 [ui-view="mainView"].ng-enter {
   -webkit-animation: fadeInRight 0.5s;
@@ -41,6 +41,10 @@
 [ui-view="mainView"].ng-leave {
   -webkit-animation: fadeOutLeft 0.5s;
   animation: fadeOutLeft 0.5s;
+}
+[ui-view="challengeView"].ng-enter {
+  -webkit-animation: slideInRight 0.5s;
+  animation: slideInRight 0.5s;
 }
 .tag-list.ng-leave {
   -webkit-animation: flipOutX 1s;
@@ -345,7 +349,6 @@ body {
 #information {
   background: url(../images/head.png) no-repeat center center fixed;
   display: table;
-  height: 800px;
   position: relative;
   width: 100%;
   -webkit-background-size: cover;
