d3 integration fot tag page

--- a/app/styles/less/animate.css
+++ b/app/styles/less/animate.css
@@ -18,3 +18,7 @@
   -webkit-animation: flipInX 1s;
   animation: flipInX 1s;
 }
+.tag-detail {
+  -webkit-animation: flipInX 1s;
+  animation: flipInX 1s;
+}
