--- a/app/styles/less/animate.css
+++ b/app/styles/less/animate.css
@@ -18,7 +18,11 @@
   -webkit-animation: flipInX 1s;
   animation: flipInX 1s;
 }
-.tag-detail {
+.tag-detail.ng-enter {
   -webkit-animation: flipInX 1s;
   animation: flipInX 1s;
+}
+.tag-detail.ng-leave {
+  -webkit-animation: flipOutX 1s;
+  animation: flipOutX 1s;
 }
