--- a/app/scripts/user/templates/profile/relation.tpl.html
+++ b/app/scripts/user/templates/profile/relation.tpl.html
@@ -23,7 +23,7 @@
         </div>
         <ul class="list-unstyled" ng-show="followings">
             <li ng-animate="'animate'" ng-repeat="following in followings"  >
-                <div user-block="following.eid" ></div>
+                <div user-block="following" ></div>
             </li>
         </ul>
     </div>
