--- a/app/scripts/project/templates/project-create.tpl.html
+++ b/app/scripts/project/templates/project-create.tpl.html
@@ -1,14 +1,14 @@
 <form name="projectform" class="form-horizontal">
-    <div class="col-md-8">
+    <div class="col-xs-12">
         <div class="form-group">
-            <label class="col-sm-3 col-xs-12 control-label">Project Name:</label>
-            <div class="col-lg-6 col-md-6 col-sm-9 col-xs-12">
+            <label class="col-sm-2 col-xs-12 control-label">Project Name:</label>
+            <div class=" col-sm-10 col-xs-12">
                 <input type="text" placeholder="as short as possiable" class="form-control" name="title" ng-model="newProject.title" required="" ng-change="titleChange(newProject.title)">
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 col-xs-12 control-label">Brief Introduction:</label>
-            <div class="col-md-6 col-sm-9 col-xs-12">
+            <label class="col-sm-2 col-xs-12 control-label">Brief Introduction:</label>
+            <div class="col-sm-10 col-xs-12">
                 <textarea ui-tinymce="tinymceOption" ng-model="newProject.brief"></textarea>
                 <!--<textarea rows="3" placeholder="no more than 140 characters" class="form-control" ng-trim="false" name="brief" ng-model="newProject.brief" required="" ng-maxlength="140"></textarea><br>-->
                 <span class="help-block" ng-show="newProject.brief.length<=140">Remain {{140-newProject.brief.length}} characters。</span>
@@ -18,42 +18,29 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 col-xs-12 control-label">Tags:</label>
-            <div class="col-md-6 col-sm-9 col-xs-12">
+            <label class="col-sm-2 col-xs-12 control-label">Tags:</label>
+            <div class="col-sm-10 col-xs-12">
                 <div class="tag-manager" entity="newProject" ng-model="newProject.tags"></div>
                     <span class="help-block" >
                         System will recommend resources to you base on your tags
                     </span>
             </div>
         </div>
-        <div class="form-group">
-            <div class="col-sm-offset-3 col-md-6 col-sm-9 col-xs-12">
-                <button type="submit" class="btn btn-default" ng-disabled="projectform.$invalid" ng-click="createProject(newProject)">Create</button>
+            <div class="form-group">
+                <label class="col-sm-2 col-xs-12 control-label">Localisation</label>
+                <div class="col-sm-10 col-xs-12">
+                    <ui-select ng-model="newProject.localisation"
+                               theme="bootstrap"
+                               reset-search-input="false">
+                        <ui-select-match placeholder="Enter an address...">{{$select.selected.formatted_address}}</ui-select-match>
+                        <ui-select-choices repeat="address in addresses track by $index"
+                                           refresh="refreshAddresses($select.search)"
+                                           refresh-delay="0">
+                            <div ng-bind-html="address.formatted_address | highlight: $select.search"></div>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="form-group">
-            <label class="col-sm-3 col-xs-12 control-label">acessUrl</label>
-            <div class="col-sm-9 col-xs-12">
-                <input type="text" class="form-control" name="title" ng-model="newProject.accessUrl" required="" disabled="true">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-3 col-xs-12 control-label">Localisation</label>
-            <div class="col-sm-9 col-xs-12">
-                <ui-select ng-model="newProject.localisation"
-                           theme="bootstrap"
-                           reset-search-input="false">
-                    <ui-select-match placeholder="Enter an address...">{{$select.selected.formatted_address}}</ui-select-match>
-                    <ui-select-choices repeat="address in addresses track by $index"
-                                       refresh="refreshAddresses($select.search)"
-                                       refresh-delay="0">
-                        <div ng-bind-html="address.formatted_address | highlight: $select.search"></div>
-                    </ui-select-choices>
-                </ui-select>
-            </div>
-        </div>
         <div ng-if="fileUploadQuestion">
             <p>
                 Do you want to add a poster to your project ?
@@ -62,10 +49,14 @@
             <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
         </div>
         <div class="form-group" ng-if="showFileUploader">
-            <label class="col-sm-3 col-xs-12 control-label">{{'CHALLENGE_SUGGEST_BRIEF'|translate}}</label>
-            <div class="col-sm-9 col-xs-12">
+            <label class="col-sm-2 col-xs-12 control-label">{{'CHALLENGE_SUGGEST_BRIEF'|translate}}</label>
+            <div class="col-sm-10 col-xs-12">
                 <cri-uploader></cri-uploader>
-
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-md-6 col-sm-9 col-xs-12">
+                <button type="submit" class="btn btn-default" ng-disabled="projectform.$invalid" ng-click="createProject(newProject)">Create</button>
             </div>
         </div>
     </div>
