--- a/app/scripts/user/templates/profile/relation.tpl.html
+++ b/app/scripts/user/templates/profile/relation.tpl.html
@@ -7,7 +7,7 @@
             {{'PROFILE_NO_FAN'|translate}}
         </div>
         <ul class="list-unstyled" ng-show="followers">
-            <li ng-animate="'animate'" ng-repeat="follower in followers" >
+            <li ng-repeat="follower in followers" >
                 <div user-block="follower" ></div>
             </li>
         </ul>
@@ -22,7 +22,7 @@
             {{'PROFILE_NO_FAN'|translate}}
         </div>
         <ul class="list-unstyled" ng-show="followings">
-            <li ng-animate="'animate'" ng-repeat="following in followings"  >
+            <li ng-repeat="following in followings"  >
                 <div user-block="following" ></div>
             </li>
         </ul>
