iframe presentation support in profile page

--- a/app/scripts/home/templates/home.tpl.html
+++ b/app/scripts/home/templates/home.tpl.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="panel-body lead">
                         <div class="list-group">
-                            <a ng-repeat="myChallenge in challenges" class="list-group-item" ui-sref="challenge.details({ pid : myChallenge.accessUrl })" ng-bind="myChallenge.title"></a>
+                            <a ng-repeat="myProject in projects" class="list-group-item" ui-sref="challenge.details({ pid : myProject.accessUrl })" ng-bind="myProject.title"></a>
                         </div>
                     </div>
                 </div>
