--- a/app/scripts/user/templates/setting.tpl.html
+++ b/app/scripts/user/templates/setting.tpl.html
@@ -8,7 +8,7 @@
                 <a ui-sref="userSettings.pass">{{'USERSET_TPL_PASS'|translate}}</a>
             </li>
             <li ui-route="/user/{{ profile.id }}/settings/avatar" ng-class="{active: $uiRoute}">
-                <a ui-sref="userSettings.avatar">{{'USERSET_TPL_AVATER'|translate}}</a>
+                <a ui-sref="userSettings.avatar">Change avatar</a>
             </li>
             <li ui-route="/user/{{ profile.id }}/settings/notify" ng-class="{active: $uiRoute}">
                 <a ui-sref="userSettings.notify">{{'USERSET_TPL_NOTIFY'|translate}}
