--- a/app/styles/less/animate.css
+++ b/app/styles/less/animate.css
@@ -1,6 +1,6 @@
 [ui-view="mainView"].ng-enter {
   -webkit-animation: fadeInRight 0.5s;
-  animation: fadeOutRight 0.5s;
+  animation: fadeInRight 0.5s;
 }
 [ui-view="mainView"].ng-leave {
   -webkit-animation: fadeOutLeft 0.5s;
