--- a/app/styles/less/animate.less
+++ b/app/styles/less/animate.less
@@ -1,7 +1,7 @@
 [ui-view="mainView"] {
   &.ng-enter{
     -webkit-animation: fadeInRight 0.5s;
-    animation: fadeOutRight 0.5s;
+    animation: fadeInRight 0.5s;
   }
   &.ng-leave{
     -webkit-animation: fadeOutLeft 0.5s;
