--- a/app/scripts/user/templates/profile/brief.tpl.html
+++ b/app/scripts/user/templates/profile/brief.tpl.html
@@ -1,8 +1,11 @@
-<div style="position:relative;" class="col-xs-12 col-md-3">
-    <div class="profile-map">
-        <google-map center="map.center" zoom="map.zoom" ng-if="map"  options="mapOptions">
-            <marker coords="map.center"></marker>
-        </google-map>
+<div class="row profile-brief">
+    <div style="position:relative;" class="col-xs-12 col-md-3">
+        <div class="profile-map">
+            <google-map center="map.center" zoom="map.zoom" ng-if="map"  options="mapOptions">
+                <marker coords="map.center"></marker>
+            </google-map>
+        </div>
     </div>
+    <p ng-bind-html="secureBrief" class="col-xs-12 col-md-9"></p>
 </div>
-<p ng-bind="profile.brief" class="col-xs-12 col-md-9"></p>
+<div ng-bind-html="securePresentation" class="row"></div>
