--- a/app/scripts/user/templates/settings/basic.tpl.html
+++ b/app/scripts/user/templates/settings/basic.tpl.html
@@ -24,7 +24,13 @@
     <div class="form-group">
         <label  class="col-sm-2 control-label">Brief</label>
         <div class="col-sm-6 col-mx-8">
-            <textarea name='brief' class="form-control" ng-model="profile.brief"/></textarea>
+            <textarea ui-tinymce="" name='brief' class="form-control" ng-model="profile.brief"/></textarea>
+        </div>
+    </div>
+    <div class="form-group">
+        <label  class="col-sm-2 control-label">Presentation</label>
+        <div class="col-sm-6 col-mx-8">
+            <div ui-ace="{mode : 'html'}" class="form-control" ng-model="profile.presentation" style="width:100%;height:100px"/></div>
         </div>
     </div>
     <div class="form-group">
